--- a/ltmain.in
+++ b/ltmain.in
@@ -1094,7 +1094,7 @@ compiler."
 	prev=vinfo
 	continue
 	;;
-	
+
       -Wc,*)
 	args=`$echo "X$arg" | $Xsed -e "$sed_quote_subst" -e 's/^-Wc,//'`
 	arg=
@@ -1343,7 +1343,7 @@ compiler."
     *) # Anything else should be a program.
       linkmode=prog ;;
     esac
-    
+
     save_deplibs="$deplibs"
     deplibs=
     newdependency_libs=
@@ -1351,10 +1351,10 @@ compiler."
     new_lib_search_path=
     need_relink=no # whether we're linking any uninstalled libtool libraries
     case $linkmode in
-    lib) 
+    lib)
 	passes="link"
 	;;
-    prog) 
+    prog)
 	alldeplibs=no
 	link_against_libtool_libs=
 	passes="scan link"
@@ -1416,7 +1416,7 @@ compiler."
 	      finalize_command="$finalize_command $deplib"
 	    fi
 	    ;;
-	  *) 
+	  *)
 	    $echo "$modename: warning: \`-L' is ignored for archives/objects" 1>&2
 	    ;;
 	  esac
@@ -1529,7 +1529,7 @@ compiler."
 	    case "$deplib" in
 	    -L*) new_lib_search_path="$new_lib_search_path "`$echo "X$deplib" | $Xsed -e 's/^-L//'`;; ### testsuite: skip nested quoting test
 	    esac
-	  
+
 	    if test "$link_all_deplibs" != no || \
 	       test "$fast_install" != no || \
 	       test "$build_libtool_libs" = no || \
@@ -1558,7 +1558,7 @@ compiler."
 	  ;;
 	esac
 	laname=`$echo "X$lib" | $Xsed -e 's%^.*/%%'`
-	
+
 	# Find the relevant object directory and library name.
 	if test "X$installed" = Xyes; then
 	  if test ! -f "$libdir/$linklib" && test -f "$abs_ladir/$linklib"; then
@@ -1615,7 +1615,7 @@ compiler."
 	    *)
 	      case "$compile_rpath " in
 	      *" $absdir "*) ;;
-	      *) compile_rpath="$compile_rpath $absdir" 
+	      *) compile_rpath="$compile_rpath $absdir"
 	      esac
 	      ;;
 	    esac
@@ -1655,7 +1655,7 @@ compiler."
 	    *)
 	      case "$compile_rpath " in
 	      *" $absdir "*) ;;
-	      *) compile_rpath="$compile_rpath $absdir" 
+	      *) compile_rpath="$compile_rpath $absdir"
 	      esac
 	      ;;
 	    esac
@@ -1669,7 +1669,7 @@ compiler."
 	      ;;
 	    esac
 	  fi
-	    
+
 	  if test -n "$old_archive_from_expsyms_cmds"; then
 	    # figure out the soname
 	    set dummy $library_names
@@ -1684,7 +1684,7 @@ compiler."
 
 	    # Make a new name for the extract_expsyms_cmds to use
 	    newlib="libimp-`echo $soname | sed 's/^lib//;s/\.dll$//'`.a"
-	  
+
 	    # If the library has no export list, then create one now
 	    if test -f "$output_objdir/$soname-def"; then :
 	    else
@@ -1698,7 +1698,7 @@ compiler."
 	      done
 	      IFS="$save_ifs"
 	    fi
- 
+
 	    # Create $newlib
 	    if test -f "$output_objdir/$newlib"; then :; else
 	      $show "generating import library for \`$soname'"
@@ -1797,7 +1797,7 @@ compiler."
 	    esac
 	  fi
 	  test "$add_name" = yes && deplibs="$deplibs -l$name"
-	  
+
 	  else
 
 	  lib_linked=yes
@@ -1883,7 +1883,7 @@ compiler."
 	    esac
 	  fi
 	  test "$add_name" = yes && finalize_command="$finalize_command -l$name"
-	  
+
 	  fi
 	elif test $linkmode = prog; then
 	  # Here we assume that one of hardcode_direct or hardcode_minus_L
@@ -1955,7 +1955,7 @@ compiler."
 	    for deplib in $dependency_libs; do
 	      case "$deplib" in
 	      -L*) path="$deplib" ;;
-	      *.la) 
+	      *.la)
 		if grep "^installed=no" $deplib > /dev/null; then
 		  dir=`$echo "X$deplib" | $Xsed -e 's%/[^/]*$%%'`
 		  test "X$dir" = "X$deplib" && dir="."
@@ -2242,7 +2242,7 @@ compiler."
 	  versuffix=
 	  verstring=""
 	fi
-	
+
 	# Check to see if the archive will have undefined symbols.
 	if test "$allow_undefined" = yes; then
 	  if test "$allow_undefined_flag" = unsupported; then
@@ -2276,7 +2276,7 @@ compiler."
 	deplibs=`echo "$deplibs " | sed -e 's% -L$path % %g'`
 	dependency_libs=`echo "$dependency_libs " | sed -e 's% -L$path % %g'`
       done
-      
+
       if test -n "$xrpath"; then
 	# If the user specified any rpath flags, then add them.
 	temp_xrpath=
@@ -2417,7 +2417,7 @@ EOF
 		      # Follow soft links.
 		      if ls -lLd "$potent_lib" 2>/dev/null \
 			 | grep " -> " >/dev/null; then
-			continue 
+			continue
 		      fi
 		      # The statement above tries to avoid entering an
 		      # endless loop below, in case of cyclic links.
@@ -2512,7 +2512,7 @@ EOF
       library_names=
       old_library=
       dlname=
-      
+
       # Test again, we may have decided not to build it any more
       if test "$build_libtool_libs" = yes; then
 	if test "$hardcode_into_libs" != no; then
@@ -2564,12 +2564,12 @@ EOF
 	  test -n "$dep_rpath" && deplibs="$dep_rpath $deplibs"
 	fi
 
-	shlibpath="$finalize_shlibpath"	
-	test "$mode" != relink && shlibpath="$compile_shlibpath$shlibpath"	
+	shlibpath="$finalize_shlibpath"
+	test "$mode" != relink && shlibpath="$compile_shlibpath$shlibpath"
 	if test -n "$shlibpath"; then
 	  eval "$shlibpath_var='$shlibpath\$$shlibpath_var'; export $shlibpath_var"
 	fi
-  
+
 	# Get the real and link names of the library.
 	eval library_names=\"$library_names_spec\"
 	set dummy $library_names
@@ -2772,7 +2772,7 @@ EOF
       gentop=
       # reload_cmds runs $LD directly, so let us get rid of
       # -Wl from whole_archive_flag_spec
-      wl= 
+      wl=
 
       if test -n "$convenience"; then
 	if test -n "$whole_archive_flag_spec"; then
@@ -2899,9 +2899,9 @@ EOF
 	if test "$dlopen" = unknown && test "$dlopen_self" = unknown &&
 	   test "$dlopen_self_static" = unknown; then
 	  $echo "$modename: warning: \`AC_LIBTOOL_DLOPEN' not used. Assuming no dlopen support."
-	fi 
+	fi
       fi
-    
+
       if test -n "$rpath$xrpath"; then
 	# If the user specified any rpath flags, then add them.
 	for libdir in $rpath $xrpath; do
@@ -3052,7 +3052,7 @@ extern \"C\" {
 	      $run eval 'egrep -v " ($exclude_expsyms)$" "$nlist" > "$nlist"T'
 	      $run eval '$mv "$nlist"T "$nlist"'
 	    fi
-	    
+
 	    if test -n "$export_symbols_regex"; then
 	      $run eval 'egrep -e "$export_symbols_regex" "$nlist" > "$nlist"T'
 	      $run eval '$mv "$nlist"T "$nlist"'
@@ -3195,7 +3195,7 @@ static const void *lt_preloaded_setup() {
 	$show "$link_command"
 	$run eval "$link_command"
 	status=$?
-	
+
 	# Delete the generated files.
 	if test -n "$dlsyms"; then
 	  $show "$rm $output_objdir/${outputname}S.${objext}"
@@ -3268,7 +3268,7 @@ static const void *lt_preloaded_setup() {
 	# Fast installation is not supported
 	link_command="$compile_var$compile_command$compile_rpath"
 	relink_command="$finalize_var$finalize_command$finalize_rpath"
-	
+
 	$echo "$modename: warning: this platform does not like uninstalled shared libraries" 1>&2
 	$echo "$modename: \`$output' will be relinked during installation" 1>&2
       else
@@ -3288,7 +3288,7 @@ static const void *lt_preloaded_setup() {
 
       # Replace the output file specification.
       link_command=`$echo "X$link_command" | $Xsed -e 's%@OUTPUT@%'"$output_objdir/$outputname"'%g'`
-      
+
       # Delete the old output files.
       $run $rm $output $output_objdir/$outputname $output_objdir/lt-$outputname
 
@@ -3300,6 +3300,7 @@ static const void *lt_preloaded_setup() {
 
       # Quote the relink command for shipping.
       if test -n "$relink_command"; then
+	relink_command="cd `pwd`; $relink_command"
 	relink_command=`$echo "X$relink_command" | $Xsed -e "$sed_quote_subst"`
       fi
 
@@ -3401,7 +3402,7 @@ else
 	  echo >> $output "\
   program=lt-'$outputname'
   progdir=\"\$thisdir/$objdir\"
-  
+
   if test ! -f \"\$progdir/\$program\" || \\
      { file=\`ls -1dt \"\$progdir/\$program\" \"\$progdir/../\$program\" 2>/dev/null | sed 1q\`; \\
        test \"X\$file\" != \"X\$progdir/\$program\"; }; then
@@ -3418,7 +3419,7 @@ else
 
     # relink executable if necessary
     if test -n \"\$relink_command\"; then
-      if (cd \"\$thisdir\" && eval \$relink_command); then :
+      if (eval \$relink_command); then :
       else
 	$rm \"\$progdir/\$file\"
 	exit 1
@@ -3532,7 +3533,7 @@ fi\
 	  exit $status
 	fi
 	generated="$generated $gentop"
-	  
+
 	# Add in members from convenience archives.
 	for xlib in $addlibs; do
 	  # Extract the objects.
@@ -3606,7 +3607,7 @@ fi\
       # Quote the link command for shipping.
       relink_command="cd `pwd`; $SHELL $0 --mode=relink $libtool_args"
       relink_command=`$echo "X$relink_command" | $Xsed -e "$sed_quote_subst"`
-      
+
       # Only create the output if not a dry run.
       if test -z "$run"; then
 	for installed in no yes; do
@@ -3619,7 +3620,7 @@ fi\
 	    newdependency_libs=
 	    for deplib in $dependency_libs; do
 	      case "$deplib" in
-	      *.la) 
+	      *.la)
 		name=`$echo "X$deplib" | $Xsed -e 's%^.*/%%'`
 		eval libdir=`sed -n -e 's/^libdir=\(.*\)$/\1/p' $deplib`
 		if test -z "$libdir"; then
@@ -3884,7 +3885,7 @@ relink_command=\"$relink_command\""
 	    continue
 	  fi
 	fi
-	
+
 	# See the names of the shared library.
 	set dummy $library_names
 	if test -n "$2"; then
@@ -4083,7 +4084,7 @@ relink_command=\"$relink_command\""
 	$show "$old_striplib $oldlib"
 	$run eval "$old_striplib $oldlib" || exit $?
       fi
-      
+
       # Do each command in the postinstall commands.
       eval cmds=\"$old_postinstall_cmds\"
       IFS="${IFS= 	}"; save_ifs="$IFS"; IFS='~'
