--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1,7 +1,7 @@
 #! /bin/sh
 
 # ltconfig - Create a system-specific libtool.
-# Copyright (C) 1996-1999 Free Software Foundation, Inc.
+# Copyright (C) 1996-2000 Free Software Foundation, Inc.
 # Originally by Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 #
 # This file is free software; you can redistribute it and/or modify it
@@ -262,21 +262,6 @@ exclude_expsyms="_GLOBAL_OFFSET_TABLE_"
 # preloaded symbol tables.
 extract_expsyms_cmds=
 
-## ld.so characteristics
-library_names_spec=
-libname_spec='lib$name'
-soname_spec=
-postinstall_cmds=
-postuninstall_cmds=
-finish_cmds=
-finish_eval=
-shlibpath_var=
-shlibpath_overrides_runpath=unknown
-version_type=none
-dynamic_linker="$host_os ld.so"
-sys_lib_dlsearch_path_spec="/lib /usr/lib"
-sys_lib_search_path_spec="/lib /usr/lib /usr/local/lib"
-
 ## Tools:
 old_AR="$AR"
 old_CC="$CC"
@@ -292,7 +277,6 @@ old_RANLIB="$RANLIB"
 old_DLLTOOL="$DLLTOOL"
 old_OBJDUMP="$OBJDUMP"
 old_AS="$AS"
-
 
 # Parse the command line options.
 args=
@@ -313,7 +297,7 @@ do
 
   case "$option" in
   --help) cat <<EOM
-Usage: $progname [OPTION]... [HOST [LTMAIN]]
+Usage: $progname [OPTION]... LTMAIN [HOST]
 
 Generate a system-specific libtool script.
 
@@ -598,15 +582,15 @@ else
   ac_tool_prefix=
 fi
 
+host_cpu=`echo $host | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\1/'`
+host_vendor=`echo $host | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\2/'`
+host_os=`echo $host | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\3/'`
+
 # Transform linux* to *-*-linux-gnu*, to support old configure scripts.
 case "$host_os" in
 linux-gnu*) ;;
 linux*) host=`echo $host | sed 's/^\(.*-.*-linux\)\(.*\)$/\1-gnu\2/'`
 esac
-
-host_cpu=`echo $host | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\1/'`
-host_vendor=`echo $host | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\2/'`
-host_os=`echo $host | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\3/'`
 
 case "$host_os" in
 aix3*)
@@ -675,7 +659,7 @@ echo "$progname:@LINENO@:checking for $compiler option to produce PIC" 1>&5
 
 if test -z "$ac_cv_prog_cc_pic"; then
   echo "$ac_t"none 1>&6
-else  
+else
   echo "$ac_t""$ac_cv_prog_cc_pic" 1>&6
 
   # Check to make sure the pic_flag actually works.
@@ -693,7 +677,7 @@ else
     if { (eval echo $progname:@LINENO@: \"$ac_compile\") 1>&5; (eval $ac_compile) 2>conftest.err; } && test -s conftest.$objext; then
       # Append any warnings to the config.log.
       cat conftest.err 1>&5
-    
+
       case "$host_os" in
       hpux9* | hpux10* | hpux11*)
 	# On HP-UX, both CC and GCC only warn that PIC is supported... then
@@ -947,6 +931,20 @@ reload_cmds='$LD$reload_flag -o $output$reload_objs'
 test -z "$deplibs_check_method" && deplibs_check_method=unknown
 
 # PORTME Fill in your ld.so characteristics
+library_names_spec=
+libname_spec='lib$name'
+soname_spec=
+postinstall_cmds=
+postuninstall_cmds=
+finish_cmds=
+finish_eval=
+shlibpath_var=
+shlibpath_overrides_runpath=unknown
+version_type=none
+dynamic_linker="$host_os ld.so"
+sys_lib_dlsearch_path_spec="/lib /usr/lib"
+sys_lib_search_path_spec="/lib /usr/lib /usr/local/lib"
+
 echo $ac_n "checking dynamic linker characteristics... $ac_c" 1>&6
 case "$host_os" in
 aix3*)
@@ -1018,7 +1016,7 @@ cygwin* | mingw*)
 freebsd1*)
   dynamic_linker=no
   ;;
-  
+
 freebsd*)
   objformat=`test -x /usr/bin/objformat && /usr/bin/objformat || echo aout`
   version_type=freebsd-$objformat
@@ -1056,6 +1054,7 @@ gnu*)
   library_names_spec='${libname}${release}.so$versuffix ${libname}${release}.so${major} ${libname}.so'
   soname_spec='${libname}${release}.so$major'
   shlibpath_var=LD_LIBRARY_PATH
+  hardcode_into_libs=yes
   ;;
 
 hpux9* | hpux10* | hpux11*)
@@ -1116,7 +1115,7 @@ linux-gnu*)
   # This implies no fast_install, which is unacceptable.
   # Some rework will be needed to allow for fast_install
   # before this can be enabled.
-  # hardcode_into_libs=yes
+  hardcode_into_libs=yes
 
   if test -f /lib/ld.so.1; then
     dynamic_linker='GNU ld.so'
@@ -1187,6 +1186,7 @@ solaris*)
   soname_spec='${libname}${release}.so$major'
   shlibpath_var=LD_LIBRARY_PATH
   shlibpath_overrides_runpath=yes
+  hardcode_into_libs=yes
   # ldd complains unless libraries are executable
   postinstall_cmds='chmod +x $lib'
   ;;
@@ -1294,7 +1294,7 @@ esac
 opt_cr=
 case "$host_os" in
 mingw*)
-  opt_cr=`echo 'x?' | tr x '\015'` # option cr in regexp
+  opt_cr=`echo 'x\{0,1\}' | tr x '\015'` # option cr in regexp
   ;;
 esac
 
@@ -1459,7 +1459,7 @@ test "$enable_shared" = yes || enable_static=yes
 
 echo "checking whether to build static libraries... $enable_static" 1>&6
 
-if test "$hardcode_action" = relink || test "$hardcode_into_libs" = yes; then
+if test "$hardcode_action" = relink || test "$hardcode_into_libs" = all; then
   # Fast installation is not supported
   enable_fast_install=no
 elif test "$shlibpath_overrides_runpath" = yes ||
@@ -1706,10 +1706,10 @@ fi
 
 fi
 
-    
+
 fi
 
-  
+
 fi
 
 
@@ -1815,7 +1815,7 @@ else
 fnord() { int i=42;}
 main() { void *self, *ptr1, *ptr2; self=dlopen(0,LTDL_GLOBAL|LTDL_LAZY_OR_NOW);
     if(self) { ptr1=dlsym(self,"fnord"); ptr2=dlsym(self,"_fnord");
-	       if(ptr1 || ptr2) { dlclose(self); exit(0); } } exit(1); } 
+               if(ptr1 || ptr2) { dlclose(self); exit(0); } } exit(1); }
 
 EOF
 if { (eval echo $progname:@LINENO@: \"$ac_link\") 1>&5; (eval $ac_link) 2>&5; } && test -s conftest && (./conftest; exit) 2>/dev/null
@@ -1888,7 +1888,7 @@ else
 fnord() { int i=42;}
 main() { void *self, *ptr1, *ptr2; self=dlopen(0,LTDL_GLOBAL|LTDL_LAZY_OR_NOW);
     if(self) { ptr1=dlsym(self,"fnord"); ptr2=dlsym(self,"_fnord");
-    if(ptr1 || ptr2) { dlclose(self); exit(0); } } exit(1); } 
+    if(ptr1 || ptr2) { dlclose(self); exit(0); } } exit(1); }
 
 EOF
 if { (eval echo $progname:@LINENO@: \"$ac_link\") 1>&5; (eval $ac_link) 2>&5; } && test -s conftest && (./conftest; exit) 2>/dev/null
@@ -1987,7 +1987,7 @@ case "$ltmain" in
 # Generated automatically by $PROGRAM (GNU $PACKAGE $VERSION$TIMESTAMP)
 # NOTE: Changes made to this file will be lost: look at ltconfig or ltmain.sh.
 #
-# Copyright (C) 1996-1999 Free Software Foundation, Inc.
+# Copyright (C) 1996-2000 Free Software Foundation, Inc.
 # Originally by Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 #
 # This program is free software; you can redistribute it and/or modify
@@ -2369,30 +2369,30 @@ EOF
       # on Windows for dlls which lack them. Don't remove nor modify the
       # starting and closing comments
 # /* impgen.c starts here */
-# /*   Copyright (C) 1999 Free Software Foundation, Inc.
-# 
+# /*   Copyright (C) 1999-2000 Free Software Foundation, Inc.
+#
 #  This file is part of GNU libtool.
-# 
+#
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
 #  the Free Software Foundation; either version 2 of the License, or
 #  (at your option) any later version.
-# 
+#
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
-# 
+#
 #  You should have received a copy of the GNU General Public License
 #  along with this program; if not, write to the Free Software
 #  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #  */
-# 
+#
 #  #include <stdio.h>		/* for printf() */
 #  #include <unistd.h>		/* for open(), lseek(), read() */
 #  #include <fcntl.h>		/* for O_RDONLY, O_BINARY */
 #  #include <string.h>		/* for strdup() */
-# 
+#
 #  /* O_BINARY isn't required (or even defined sometimes) under Unix */
 #  #ifndef O_BINARY
 #  #define O_BINARY 0
@@ -2408,7 +2408,7 @@ EOF
 #    read (fd, b, 2);
 #    return b[0] + (b[1]<<8);
 #  }
-# 
+#
 #  static unsigned int
 #  pe_get32 (fd, offset)
 #      int fd;
@@ -2419,7 +2419,7 @@ EOF
 #    read (fd, b, 4);
 #    return b[0] + (b[1]<<8) + (b[2]<<16) + (b[3]<<24);
 #  }
-# 
+#
 #  static unsigned int
 #  pe_as32 (ptr)
 #       void *ptr;
@@ -2427,7 +2427,7 @@ EOF
 #    unsigned char *b = ptr;
 #    return b[0] + (b[1]<<8) + (b[2]<<16) + (b[3]<<24);
 #  }
-# 
+#
 #  int
 #  main (argc, argv)
 #      int argc;
@@ -2439,32 +2439,32 @@ EOF
 #      unsigned long name_rvas, nexp;
 #      unsigned char *expdata, *erva;
 #      char *filename, *dll_name;
-# 
+#
 #      filename = argv[1];
-# 
+#
 #      dll = open(filename, O_RDONLY|O_BINARY);
 #      if (!dll)
 #  	return 1;
-# 
+#
 #      dll_name = filename;
-#    
+#
 #      for (i=0; filename[i]; i++)
 #  	if (filename[i] == '/' || filename[i] == '\\'  || filename[i] == ':')
 #  	    dll_name = filename + i +1;
-# 
+#
 #      pe_header_offset = pe_get32 (dll, 0x3c);
 #      opthdr_ofs = pe_header_offset + 4 + 20;
 #      num_entries = pe_get32 (dll, opthdr_ofs + 92);
-# 
+#
 #      if (num_entries < 1) /* no exports */
 #  	return 1;
-# 
+#
 #      export_rva = pe_get32 (dll, opthdr_ofs + 96);
 #      export_size = pe_get32 (dll, opthdr_ofs + 100);
 #      nsections = pe_get16 (dll, pe_header_offset + 4 +2);
 #      secptr = (pe_header_offset + 4 + 20 +
 #  	      pe_get16 (dll, pe_header_offset + 4 + 16));
-# 
+#
 #      expptr = 0;
 #      for (i = 0; i < nsections; i++)
 #      {
@@ -2483,29 +2483,29 @@ EOF
 #  	    break;
 #  	}
 #      }
-# 
+#
 #      expdata = (unsigned char*)malloc(export_size);
 #      lseek (dll, expptr, SEEK_SET);
 #      read (dll, expdata, export_size);
 #      erva = expdata - export_rva;
-# 
+#
 #      nexp = pe_as32 (expdata+24);
 #      name_rvas = pe_as32 (expdata+32);
-# 
+#
 #      printf ("EXPORTS\n");
 #      for (i = 0; i<nexp; i++)
 #      {
 #  	unsigned long name_rva = pe_as32 (erva+name_rvas+i*4);
 #  	printf ("\t%s @ %ld ;\n", erva+name_rva, 1+ i);
 #      }
-# 
+#
 #      return 0;
 #  }
 # /* impgen.c ends here */
 
 EOF
-      ;;
-    esac
+    ;;
+  esac
 
 
     # Append the ltmain.sh script.
